# haskell-oidc-client

./: .editorconfig  .gitignore  .stylish-haskell.yaml  CHANGELOG.md  LICENSE  README.md  Web-OIDC-Client-CodeFlow.html  Web-OIDC-Client-Discovery-Issuers.html  Web-OIDC-Client-Discovery-Provider.html  Web-OIDC-Client-Discovery.html  Web-OIDC-Client-Settings.html  Web-OIDC-Client-Tokens.html  Web-OIDC-Client-Types.html  Web-OIDC-Client.html  Web-OIDC-Discovery-Issuers.html  Web-OIDC-Discovery.html  brittany.yaml  circle.yml  doc-index.html  index-frames.html  index.html  mini_Web-OIDC-Client-CodeFlow.html  mini_Web-OIDC-Client-Discovery-Issuers.html  mini_Web-OIDC-Client-Discovery-Provider.html  mini_Web-OIDC-Client-Discovery.html  mini_Web-OIDC-Client-Settings.html  mini_Web-OIDC-Client-Tokens.html  mini_Web-OIDC-Client-Types.html  mini_Web-OIDC-Client.html  mini_Web-OIDC-Discovery-Issuers.html  mini_Web-OIDC-Discovery.html  oidc-client.cabal  oidc-client.haddock  release.nix  shell.nix  stack.yaml
.circleci/: config.yml
.github/workflows/: testing.yml
examples/scotty/: LICENSE  Main.hs  scotty-example.cabal
nix/: 20_03.nix  21_05.nix
src/: Web-OIDC-Client-CodeFlow.html  Web-OIDC-Client-Discovery-Issuers.html  Web-OIDC-Client-Discovery-Provider.html  Web-OIDC-Client-Discovery.html  Web-OIDC-Client-Internal.html  Web-OIDC-Client-Settings.html  Web-OIDC-Client-Tokens.html  Web-OIDC-Client-Types.html  Web-OIDC-Client.html  Web-OIDC-Discovery-Issuers.html  Web-OIDC-Discovery.html  Web-OIDC-Types.html
src/Web/OIDC/: Client.hs  Discovery.hs  Internal.hs  Types.hs
src/Web/OIDC/Client/: CodeFlow.hs  Context.hs  Discovery.hs  IdTokenFlow.hs  Internal.hs  Settings.hs  Tokens.hs  Types.hs
src/Web/OIDC/Client/Discovery/: Issuers.hs  Provider.hs
src/Web/OIDC/Discovery/: Issuers.hs  Providers.hs
test/: Spec.hs
test/Spec/: Client.hs
test/Spec/Client/: Discovery.hs  Internal.hs
