name:               oidc-client
version:            0.1.0.0
synopsis:           OpenID Connect 1.0 library for RP
description:
    oidc-client is an OpenID Connect 1.0 library for RP.
    .
    Examples: <https://github.com/krdlab/haskell-oidc-client/tree/master/examples>

homepage:           https://github.com/krdlab/haskell-oidc-client
license:            MIT
license-file:       LICENSE
author:             krdlab
maintainer:         krdlab@gmail.com
copyright:          (c) 2015 Sho Kuroda
category:           Web
build-type:         Simple
cabal-version:      >=1.10

flag network-uri
  default: True

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Web.OIDC.Client
  other-modules:
      Web.OIDC.Discovery
    , Web.OIDC.Discovery.Providers
    , Web.OIDC.Types
    , Web.OIDC.Internal
  build-depends:
      base >=4.7 && <5
    , bytestring
    , text
    , aeson
    , exceptions
    , http-client
    , tls >=1.3.2
    , http-client-tls
    , jose-jwt >=0.6.2
    , time
    , crypto-random
    , cprng-aes
  if  flag(network-uri)
    build-depends: network-uri >=2.6, network >=2.6
  else
    build-depends: network-uri <2.6, network <2.6

