name:               scotty-example
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             krdlab
maintainer:         krdlab@gmail.com
copyright:          (c) 2015 Sho Kuroda
build-type:         Simple
cabal-version:      >=1.10

executable scotty-example
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
      base >=4.7 && <5
    , bytestring
    , text
    , scotty
    , wai-extra
    , transformers
    , blaze-html
    , scotty-cookie
    , oidc-client
    , jose-jwt
    , data-default
    , cprng-aes
    , crypto-random
    , base32-bytestring
    , containers
    , http-types
    , http-client
    , tls >=1.3.2
    , http-client-tls

